--- a/.github/workflows/chall1.yml
+++ b/.github/workflows/chall1.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   chall:
+    if: ${{ github.event.label.name == 'chall1' }}
     runs-on: ubuntu-latest
     steps:
     - name: Cleanup your mess
