--- a/.github/workflows/chall3.yml
+++ b/.github/workflows/chall3.yml
@@ -4,6 +4,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: ${{ github.event.label.name == 'chall3' }}
     steps:
       - name: Set the intermediate environment variable for security
         env:
