--- a/.github/workflows/chall5.yml
+++ b/.github/workflows/chall5.yml
@@ -4,6 +4,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: ${{ github.event.label.name == 'chall5' }}
     steps:
       - if: ${{ github.secret_source == 'Actions' }}
         name: Check that flag is present
