--- a/.github/workflows/chall6.yml
+++ b/.github/workflows/chall6.yml
@@ -4,6 +4,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: ${{ github.event.label.name == 'chall6' }}
     steps:
 
       - name: Parse body
