--- a/.github/workflows/chall1.yml
+++ b/.github/workflows/chall1.yml
@@ -15,4 +15,4 @@ jobs:
       run: |
         echo '${{ github.event.comment.body }}'
       env:
-        FLAG: ${{ secrets.FLAG }}
+        FLAG: ${{ secrets.FLAG1 }}
