--- a/.github/workflows/chall2.yml
+++ b/.github/workflows/chall2.yml
@@ -29,7 +29,7 @@ jobs:
           pip install -r requirements.txt
           python3 -m unittest run_tests.py -v
         env:
-          FLAG: ${{ secrets.FLAG }}
+          FLAG: ${{ secrets.FLAG2 }}
       
 # Not necessary for now      
 #      - name : Do the release
