--- a/.github/workflows/chall3.yml
+++ b/.github/workflows/chall3.yml
@@ -15,4 +15,4 @@ jobs:
         run: |
           echo "Hello World !"
         env:
-          FLAG: ${{ secrets.FLAG }}
+          FLAG: ${{ secrets.FLAG3 }}
